force-app/main/default/objects/PNNL_Data_Event__e/PNNL_Data_Event__e.object-meta.xml
<CustomObject>
    <description>Event triggered by change in data inside PCAS system. Events will trigger changes in PNNL legacy systems</description>
    <label>PNNL Data Event</label>
    <pluralLabel>PNNL Data Events</pluralLabel>
</CustomObject>