force-app/main/default/objects/PNNL_Data_Event__e/fields/Cost_Sheet_No__c.field-meta.xml
<CustomField>
    <fullName>Cost_Sheet_No__c</fullName>
    <description>Cost sheet number to be entered on requests for cost sheet details.</description>
    <label>Cost Sheet No</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>