force-app/main/default/objects/PNNL_Data_Event__e/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <label>ObjectType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>