force-app/main/default/objects/PNNL_Data_Event__e/fields/UpdateType__c.field-meta.xml
<CustomField>
    <fullName>UpdateType__c</fullName>
    <label>UpdateType</label>
    <length>10</length>
    <type>Text</type>
</CustomField>